tests/ui/invalid_token.stderr
error: unexpected token in path segment
 --> tests/ui/invalid_token.rs:4:18
  |
4 | type X = Cursor!(@.field: i32);
  |                  ^
